adcionado minha profissão

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		<h1>Olá Mundo!</h1>
 		<p>Meu nome: Alexandre</p>
 		<p>Minha idade: 22</p>
+			<p>Minha profissão: Professor</p>
 	</body>
 </html>
